--- a/lib/revenue/package.json
+++ b/lib/revenue/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@classytic/revenue",
-  "version": "1.0.3",
+  "version": "1.0.6",
   "description": "Enterprise revenue management system with subscriptions, payments, escrow, splits - Modern, Type-safe, Resilient",
   "type": "module",
   "main": "./dist/index.js",
@@ -89,7 +89,8 @@
     "LICENSE"
   ],
   "peerDependencies": {
-    "mongoose": "^8.0.0 || ^9.0.0"
+    "mongoose": "^8.0.0 || ^9.0.0",
+    "zod": "^4.1.13"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -98,10 +99,10 @@
     "@types/node": "^22.8.7",
     "rimraf": "^6.0.0",
     "tsup": "^8.3.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "zod": "^4.1.13"
   },
   "dependencies": {
-    "nanoid": "^5.1.6",
-    "zod": "^4.1.13"
+    "nanoid": "^5.1.6"
   }
 }
